--- a/src/AwsDotNetCmdUtils/AwsDotNetS3LargeFileXferCmd/AwsDotNetS3LargeFileXferCmd.csproj
+++ b/src/AwsDotNetCmdUtils/AwsDotNetS3LargeFileXferCmd/AwsDotNetS3LargeFileXferCmd.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <LangVersion>7.1</LangVersion>
+    <Version>1.0.30.0</Version>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="3.3.102.5" />
+  </ItemGroup>
 
 </Project>
